# helpdesk-bot

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini
kb_default/: faq_data.csv
src/helpdesk_bot/: __init__.py  api.py  core.py  ui.py
tests/: test_api.py
