# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helpdesk-rag-bot"
version = "0.1.0"
description = "A helpdesk chatbot using RAG, LangGraph, FastAPI, and Streamlit."
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pydantic>=2.6.0",

    # LangChain stack
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.8",
    "langgraph>=0.2.14",
    "faiss-cpu>=1.8.0",

    # Loaders
    "pypdf>=4.2.0",
    "docx2txt>=0.8", # requirements.txt의 python-docx를 코드가 사용하는 docx2txt로 수정

    # Version Pinning
    "numpy>=1.26.4,<2.0.0",
]

# [project.optional-dependencies]는 선택적 의존성 그룹을 정의합니다.
# "test" 그룹은 테스트 시에만 필요한 pytest를 포함합니다.
[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]