# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helpdesk-rag-bot"
version = "0.1.0"
description = "A helpdesk chatbot using RAG, LangGraph, FastAPI, and Streamlit."
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pydantic>=2.6.0",

    # LangChain stack
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.8",
    "langgraph>=0.2.14",
    "faiss-cpu>=1.8.0",
    "pykospacing>=0.5",  # ðŸ’¡ ì¶”ê°€: PyKoSpacing ë¼ì´ë¸ŒëŸ¬ë¦¬

    # Loaders
    "pypdf>=4.2.0",
    "docx2txt>=0.8", # requirements.txtì˜ python-docxë¥¼ ì½”ë“œê°€ ì‚¬ìš©í•˜ëŠ” docx2txtë¡œ ìˆ˜ì •

    # Version Pinning
    "numpy>=1.26.4,<2.0.0",
]

# [project.optional-dependencies]ëŠ” ì„ íƒì  ì˜ì¡´ì„± ê·¸ë£¹ì„ ì •ì˜í•©ë‹ˆë‹¤.
# "test" ê·¸ë£¹ì€ í…ŒìŠ¤íŠ¸ ì‹œì—ë§Œ í•„ìš”í•œ pytestë¥¼ í¬í•¨í•©ë‹ˆë‹¤.
[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]